# datafusion-plugin-json

./: Cargo.toml  README.md
src/: lib.rs
